--- a/jvstm/build.xml
+++ b/jvstm/build.xml
@@ -14,7 +14,7 @@
 
   <target name="compile" description="Compiles the jvstm source">
     <mkdir dir="${build.dir}"/>
-    <javac srcdir="${src.dir}" destdir="${build.dir}"/>
+    <javac srcdir="${src.dir}" destdir="${build.dir}" debug="on"/>
   </target>
 
   <target name="jar" depends="compile" description="Generates the jar with the jvstm">
