--- a/jvstm/build.xml
+++ b/jvstm/build.xml
@@ -4,6 +4,7 @@
   <property name="src.dir" location="src"/>
   <property name="build.dir" location="classes"/>
   <property name="dist.dir" location="dist"/>
+  <property name="src.dist.dir" location="src-dist"/>
   <property name="lib.dir" location="lib"/>
   <property name="jar.file" value="${dist.dir}/jvstm.jar"/>
 
@@ -11,12 +12,29 @@
   <target name="clean-all" description="Removes any generated files">
     <delete dir="${build.dir}"/>
     <delete dir="${dist.dir}"/>
+    <delete dir="${src.dist.dir}"/>
   </target>
 
   <target name="compile" description="Compiles the jvstm source">
     <mkdir dir="${build.dir}"/>
     <javac srcdir="${src.dir}" destdir="${build.dir}" extdirs="${lib.dir}" debug="on"/>
   </target>
+
+  <target name="src-dist" description="Builds a source distribution">
+    <tstamp/>
+    <property name="jvstm.src.dist.dir" location="${src.dist.dir}/jvstm-${DSTAMP}"/>
+    <mkdir dir="${jvstm.src.dist.dir}"/>
+    <copy todir="${jvstm.src.dist.dir}/src">
+      <fileset dir="${src.dir}" includes="**/*.java"/>
+    </copy>
+    <copy todir="${jvstm.src.dist.dir}/lib">
+      <fileset dir="${lib.dir}"/>
+    </copy>
+    <copy file="LICENSE.txt" todir="${jvstm.src.dist.dir}"/>
+    <copy file="build.xml" todir="${jvstm.src.dist.dir}"/>
+    <jar destfile="jvstm-src-${DSTAMP}.jar" basedir="${src.dist.dir}"/>
+  </target>
+
 
   <target name="jar" depends="compile" description="Generates the jar with the jvstm">
     <mkdir dir="${dist.dir}"/>
