--- a/jvstm/build.xml
+++ b/jvstm/build.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="ISO-8859-1"?>
 <project basedir="." default="compile" name="jvstm Build File">
 
-  <property name="src.dir" location="src"/>
-  <property name="build.dir" location="classes"/>
-  <property name="dist.dir" location="dist"/>
+  <property name="src.dir" location="src/main/java"/>
+  <property name="dist.dir" location="target"/>
+  <property name="build.dir" location="${dist.dir}/classes"/>
   <property name="src.dist.dir" location="src-dist"/>
   <property name="lib.dir" location="lib"/>
-  <property name="jar.file" value="${dist.dir}/jvstm.jar"/>
+  <property name="dist.version" value="1.0-SNAPSHOT"/>
+  <property name="jar.file" value="${dist.dir}/jvstm-${dist.version}.jar"/>
 
 
   <target name="clean-all" description="Removes any generated files">
@@ -17,7 +18,7 @@
 
   <target name="compile" description="Compiles the jvstm source">
     <mkdir dir="${build.dir}"/>
-    <javac srcdir="${src.dir}" destdir="${build.dir}" extdirs="${lib.dir}" target="1.5" debug="on"/>
+    <javac includeantruntime="false" srcdir="${src.dir}" destdir="${build.dir}" extdirs="${lib.dir}" target="1.5" debug="on"/>
     <java classname="jvstm.ProcessAtomicAnnotations" fork="true">
       <arg value="${build.dir}"/>
       <classpath>
