--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>jvstm</groupId>
-  <artifactId>jvstm</artifactId>
+  <artifactId>jvstm-fenix</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>jvstm</name>
+  <name>jvstm-fenix</name>
   <url>http://web.ist.utl.pt/joao.cachopo/jvstm/</url>
     <build>
         <plugins>
