--- a/jvstm/build.xml
+++ b/jvstm/build.xml
@@ -9,6 +9,12 @@
   <property name="dist.version" value="1.0-SNAPSHOT"/>
   <property name="jar.file" value="${dist.dir}/jvstm-${dist.version}.jar"/>
 
+  <path id="project.class.path">
+    <pathelement path="${build.dir}"/>
+    <fileset dir="${lib.dir}">
+      <include name="**/*.jar"/>
+    </fileset>
+  </path>
 
   <target name="clean-all" description="Removes any generated files">
     <delete dir="${build.dir}"/>
@@ -19,13 +25,13 @@
   <target name="compile" description="Compiles the jvstm source">
     <mkdir dir="${build.dir}"/>
     <javac includeantruntime="false" srcdir="${src.dir}" destdir="${build.dir}" extdirs="${lib.dir}" target="1.5" debug="on"/>
-    <java classname="jvstm.ProcessAtomicAnnotations" fork="true">
+    <java classname="jvstm.atomic.GenerateAtomicInstance" fork="true">
       <arg value="${build.dir}"/>
-      <classpath>
-        <pathelement location="${build.dir}"/>
-        <pathelement location="${lib.dir}/asm-commons-3.0.jar"/>
-        <pathelement location="${lib.dir}/asm-3.0.jar"/>
-      </classpath>
+      <classpath refid="project.class.path"/>
+    </java>
+    <java classname="jvstm.atomic.ProcessAtomicAnnotations" fork="true">
+      <arg value="${build.dir}"/>
+      <classpath refid="project.class.path"/>
     </java>
   </target>
 
