--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -23,17 +23,10 @@
 
     <dependencies>
     <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm</artifactId>
-        <version>3.0</version>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-debug-all</artifactId>
+        <version>4.0</version>
     </dependency>
-
-    <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm-commons</artifactId>
-        <version>3.0</version>
-    </dependency>
-
   </dependencies>
 
 	<distributionManagement>
