Extract ProcessAtomicAnnotations from the JVSTM into a library, renaming the @jvstm.Atomic annotation to @pt.ist.esw.atomicannotation.Atomic
ProcessAtomicAnnotations and helper classes from the jvstm.atomic have been separated into an
independent library: atomicannotation.

This commit removes the old code from the JVSTM, adds the new library, and updates any references
to the old code and functionality.

Note that the old @jvstm.Atomic annotation has now become @pt.ist.esw.atomicannotation.Atomic.

--- a/jvstm/build.xml
+++ b/jvstm/build.xml
@@ -28,11 +28,11 @@
   <target name="compile" description="Compiles the jvstm source">
     <mkdir dir="${build.dir}"/>
     <javac includeantruntime="false" srcdir="${src.dir}" destdir="${build.dir}" extdirs="${lib.dir}" target="1.5" debug="on"/>
-    <java classname="jvstm.atomic.GenerateAtomicInstance" fork="true">
+    <!--<java classname="jvstm.atomic.GenerateAtomicInstance" fork="true">
       <arg value="${build.dir}"/>
       <classpath refid="project.class.path"/>
-    </java>
-    <java classname="jvstm.atomic.ProcessAtomicAnnotations" fork="true">
+    </java>-->
+    <java classname="pt.ist.esw.atomicannotation.ProcessAtomicAnnotations" fork="true">
       <arg value="${build.dir}"/>
       <classpath refid="project.class.path"/>
     </java>
