--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>jvstm</groupId>
-  <artifactId>jvstm</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>jvstm</name>
-  <url>http://web.ist.utl.pt/joao.cachopo/jvstm/</url>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>jvstm</groupId>
+    <artifactId>jvstm</artifactId>
+    <packaging>jar</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name>jvstm</name>
+    <url>http://web.ist.utl.pt/joao.cachopo/jvstm/</url>
     <build>
         <plugins>
             <plugin>
@@ -21,24 +21,36 @@
         </plugins>
     </build>
 
-    <dependencies>
-    <dependency>
-        <groupId>org.ow2.asm</groupId>
-        <artifactId>asm-debug-all</artifactId>
-        <version>4.0</version>
-    </dependency>
-  </dependencies>
+    <repositories>
+        <repository>
+            <id>inesc-id-esw-repository</id>
+            <url>http://inesc-id-esw.github.com/maven-repo/</url>
+        </repository>
+    </repositories>
 
-	<distributionManagement>
-	    <repository>
-	      <id>jvstm-release</id>
-	      <url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/jvstm-release</url>
-	    </repository>
-	    <snapshotRepository>
-	      <id>jvstm-snapshot</id>
-	      <url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/jvstm-snapshot</url>
-	    </snapshotRepository>
-	</distributionManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm-debug-all</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>pt.ist.esw</groupId>
+            <artifactId>atomic-annotation</artifactId>
+            <version>1.0</version>
+        </dependency>
+    </dependencies>
+
+    <distributionManagement>
+        <repository>
+            <id>jvstm-release</id>
+            <url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/jvstm-release</url>
+        </repository>
+        <snapshotRepository>
+            <id>jvstm-snapshot</id>
+            <url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/jvstm-snapshot</url>
+        </snapshotRepository>
+    </distributionManagement>
 
 
 </project>
