--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -18,6 +18,40 @@
     </properties>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.13</version>
+                    <configuration>
+                        <argLine>-Xms1G -Xmx1G</argLine>
+                        <includes>
+                            <!-- Add the defaults -->
+                            <include>**/Test*.java</include>
+                            <include>**/*Test.java</include>
+                            <include>**/*TestCase.java</include>
+
+                            <!-- Add the nonstandard names -->
+                            <include>jvstm/test/point/utests/PointTestForAomDouble.java</include>
+                            <include>jvstm/test/point/utests/PointTestForAomInt.java</include>
+                            <include>jvstm/test/point/utests/PointTestForAomInteger.java</include>
+                            <include>jvstm/test/point/utests/PointTestForAomShort.java</include>
+                            <!-- <include>jvstm/test/point/utests/gc/AomGcTestForDoublePoint.java</include> -->
+                            <!-- <include>jvstm/test/point/utests/gc/AomGcTestForIntegerPoint.java</include> -->
+                            <!-- <include>jvstm/test/point/utests/gc/AomGcTestForIntPoint.java</include> -->
+                            <!-- <include>jvstm/test/point/utests/gc/AomGcTestForShortPoint.java</include> -->
+                        </includes>
+                        <excludes>
+                            <exclude>jvstm/test/point/utests/gc/AomGcTestForDoublePoint.java</exclude>
+                            <enclude>jvstm/test/point/utests/gc/AomGcTestForIntegerPoint.java</enclude>
+                            <enclude>jvstm/test/point/utests/gc/AomGcTestForIntPoint.java</enclude>
+                            <enclude>jvstm/test/point/utests/gc/AomGcTestForShortPoint.java</enclude>
+                        </excludes>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
