--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -15,6 +15,7 @@
         <version.guice>2.0</version.guice>
         <version.junit>4.10</version.junit>
         <version.jwormbench>1.0</version.jwormbench>
+        <version.maven.exec-plugin>1.2.1</version.maven.exec-plugin>
     </properties>
 
     <build>
@@ -63,7 +64,30 @@
                     <target>1.6</target>
                 </configuration>
             </plugin>
+
+            <!-- ProcessAtomicAnnotations immediatly after compiling -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${version.maven.exec-plugin}</version>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <mainClass>pt.ist.esw.atomicannotation.ProcessAtomicAnnotations</mainClass>
+                    <arguments>
+                        <argument>${project.build.outputDirectory}</argument>
+                    </arguments>
+                </configuration>
+            </plugin>
+
         </plugins>
+
     </build>
 
     <repositories>
