--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -17,11 +17,25 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+        <version.junit>4.10</version.junit>
         <version.maven.compiler-plugin>2.0.2</version.maven.compiler-plugin>
         <version.maven.exec-plugin>1.2.1</version.maven.exec-plugin>
     </properties>
 
     <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.13</version>
+                    <configuration>
+                        <argLine>-Xms1G -Xmx1G</argLine>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -33,25 +47,58 @@
                 </configuration>
             </plugin>
 
-            <!-- ProcessAtomicAnnotations immediatly after compiling -->
+            <!-- Generate the AtomicInstance and ProcessAtomicAnnotations immediatly after compiling -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>${version.maven.exec-plugin}</version>
+                <!-- Generate AtomicInstance -->
                 <executions>
                     <execution>
+                        <id>generate-atomic-instance</id>
                         <phase>process-classes</phase>
                         <goals>
                             <goal>java</goal>
                         </goals>
+                        <configuration>
+                            <mainClass>pt.ist.esw.advice.GenerateAnnotationInstance</mainClass>
+                            <arguments>
+                                <argument>jvstm.Atomic</argument>
+                                <argument>${project.build.outputDirectory}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <!-- Process Atomic Annotations in the main code -->
+                    <execution>
+                        <id>process-annotations</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>pt.ist.esw.advice.ProcessAnnotations</mainClass>
+                            <arguments>
+                                <argument>jvstm.Atomic</argument>
+                                <argument>${project.build.outputDirectory}</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <!-- Process Atomic Annotations in the test code -->
+                    <execution>
+                        <id>process-test-annotations</id>
+                        <phase>process-test-classes</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>pt.ist.esw.advice.ProcessAnnotations</mainClass>
+                            <arguments>
+                                <argument>jvstm.Atomic</argument>
+                                <argument>${project.build.testOutputDirectory}</argument>
+                            </arguments>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <mainClass>pt.ist.esw.atomicannotation.ProcessAtomicAnnotations</mainClass>
-                    <arguments>
-                        <argument>${project.build.outputDirectory}</argument>
-                    </arguments>
-                </configuration>
             </plugin>
 
         </plugins>
@@ -71,8 +118,14 @@
     <dependencies>
         <dependency>
             <groupId>pt.ist.esw</groupId>
-            <artifactId>atomic-annotation</artifactId>
-            <version>1.0</version>
+            <artifactId>advice</artifactId>
+            <version>1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${version.junit}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
@@ -86,6 +139,4 @@
             <url>https://fenix-ashes.ist.utl.pt/nexus/content/repositories/jvstm-snapshot</url>
         </snapshotRepository>
     </distributionManagement>
-
-
 </project>
