--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -4,7 +4,7 @@
     <groupId>jvstm</groupId>
     <artifactId>jvstm</artifactId>
     <packaging>jar</packaging>
-    <version>1.2</version>
+    <version>1.3-SNAPSHOT</version>
     <name>JVSTM lock-based</name>
     <url>http://web.ist.utl.pt/joao.cachopo/jvstm/</url>
 
