--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -96,6 +96,7 @@
                         <configuration>
                             <mainClass>pt.ist.esw.advice.ProcessAnnotations</mainClass>
                             <arguments>
+                                <argument>-a</argument>
                                 <argument>jvstm.Atomic</argument>
                                 <argument>${project.build.outputDirectory}</argument>
                             </arguments>
@@ -111,6 +112,7 @@
                         <configuration>
                             <mainClass>pt.ist.esw.advice.ProcessAnnotations</mainClass>
                             <arguments>
+                                <argument>-a</argument>
                                 <argument>jvstm.Atomic</argument>
                                 <argument>${project.build.testOutputDirectory}</argument>
                             </arguments>
@@ -124,8 +126,8 @@
 
     <repositories>
         <repository>
-            <id>inesc-id-esw-repository</id>
-            <url>http://inesc-id-esw.github.com/maven-repo/</url>
+            <id>advice-repository</id>
+            <url>http://inesc-id-esw.github.com/advice/maven-repo/</url>
         </repository>
         <repository>
             <id>local-repo</id>
@@ -137,7 +139,7 @@
         <dependency>
             <groupId>pt.ist.esw</groupId>
             <artifactId>advice</artifactId>
-            <version>1.2</version>
+            <version>1.5</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
