--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -9,10 +9,11 @@
     <url>http://web.ist.utl.pt/joao.cachopo/jvstm/</url>
 
     <scm>
-        <connection>scm:git:/afs/ist.utl.pt/groups/esw-inesc-id/git/esw</connection>
-        <developerConnection>scm:git:/afs/ist.utl.pt/groups/esw-inesc-id/git/esw</developerConnection>
+        <connection>scm:git:git@github.com:inesc-id-esw/JVSTM.git</connection>
+        <developerConnection>scm:git:git@github.com:inesc-id-esw/JVSTM.git</developerConnection>
         <!-- <url>Should be a publicly browsable repository</url> -->
-    </scm>
+        <tag>HEAD</tag>
+  </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
