--- a/jvstm/pom.xml
+++ b/jvstm/pom.xml
@@ -2,7 +2,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>jvstm</groupId>
-    <artifactId>jvstm</artifactId>
+    <artifactId>jvstm-lock-based</artifactId>
     <packaging>jar</packaging>
     <version>1.3-SNAPSHOT</version>
     <name>JVSTM lock-based</name>
