Fix logging - replace printlns by slf4j.logging.
* RunMultipleThreadsInLoop => replace all printlns by logging.

* pom.xml => include additional dependencies for slf4j

* logging.properties => logging configuration for unit tests.

* ActiveTransactionsRecord => remove the formatter configuration that is included in the previous logging.properties.

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
                         <argLine>-Xms1G -Xmx1G</argLine>
                         <systemPropertyVariables>
                             <jvstm.aom.reversion>true</jvstm.aom.reversion>
+                            <java.util.logging.config.file>target/test-classes/logging.properties</java.util.logging.config.file>
                         </systemPropertyVariables>
                         <includes>
                             <!-- Add the defaults -->
@@ -153,6 +154,16 @@
     </repositories>
 
     <dependencies>
+        <dependency> 
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+        </dependency>
+        <dependency> 
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-jdk14</artifactId>
+            <version>1.7.5</version>
+        </dependency>
         <dependency>
             <groupId>pt.ist.esw</groupId>
             <artifactId>advice</artifactId>
