--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>jvstm</groupId>
     <artifactId>jvstm</artifactId>
     <packaging>jar</packaging>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0</version>
     <name>JVSTM (lock-free)</name>
     <url>http://inesc-id-esw.github.com/JVSTM</url>
 
@@ -24,7 +23,7 @@
         <connection>scm:git:git@github.com:inesc-id-esw/JVSTM.git</connection>
         <developerConnection>scm:git:git@github.com:inesc-id-esw/JVSTM.git</developerConnection>
         <url>http://inesc-id-esw.github.com/JVSTM</url>
-        <tag>HEAD</tag>
+        <tag>jvstm-2.0</tag>
     </scm>
 
     <build>
