Update name of jvstm-pages local directory

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <project.deploy.maven-repo>file:///${basedir}/../JVSTM-pages/maven-repo</project.deploy.maven-repo>
+        <project.deploy.maven-repo>file:///${basedir}/../jvstm-pages/maven-repo</project.deploy.maven-repo>
 
         <version.guice>2.0</version.guice>
         <version.junit>4.10</version.junit>
