--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>jvstm</groupId>
     <artifactId>jvstm</artifactId>
     <packaging>jar</packaging>
-    <version>2.3-SNAPSHOT</version>
+    <version>2.3</version>
     <name>JVSTM (lock-free)</name>
     <url>http://inesc-id-esw.github.com/JVSTM</url>
 
@@ -23,7 +23,7 @@
         <connection>scm:git:git@github.com:inesc-id-esw/JVSTM.git</connection>
         <developerConnection>scm:git:git@github.com:inesc-id-esw/JVSTM.git</developerConnection>
         <url>http://inesc-id-esw.github.com/JVSTM</url>
-        <tag>HEAD</tag>
+        <tag>jvstm-2.3</tag>
     </scm>
 
     <build>
